# device-flash25q

./: CMakeLists.txt  README.md  aDev_flash25q.c  aDev_flash25q.h
sfud/inc/: sfud_cfg.h  sfud_flash_def.h
sfud/port/: sfud_port.c
sfud/src/: sfud.c
